Closed Bug 1501229 Opened 7 years ago Closed 7 years ago

Intermittent SM build bustage Assertion failure: oom::simulator.maxChecks() == (18446744073709551615UL), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:340

Categories

(Core :: JavaScript Engine: JIT, defect, P5)

defect

Tracking

()

RESOLVED FIXED
mozilla65
Tracking Status
firefox65 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: jandem)

References

Details

(Keywords: intermittent-failure)

Attachments

(1 file)

Filed by: btara [at] mozilla.com https://treeherder.mozilla.org/logviewer.html#?job_id=207213594&repo=autoland https://queue.taskcluster.net/v1/task/XJGGZn0bR0exLuceQ2fEdQ/runs/0/artifacts/public/logs/live_backing.log [task 2018-10-23T08:49:08.868Z] TEST-PASS | js/src/jit-test/tests/self-test/readlineBuf.js | Success (code 0, args "--baseline-eager") [0.1 s] [task 2018-10-23T08:49:08.868Z] {"action": "test_start", "jitflags": "--baseline-eager", "pid": 14269, "source": "jittests", "test": "self-test/readlineBuf.js", "thread": "main", "time": 1540284548.741647} [task 2018-10-23T08:49:08.869Z] {"action": "test_end", "extra": {"jitflags": "--baseline-eager", "pid": 14269}, "jitflags": "--baseline-eager", "message": "Success", "pid": 14269, "source": "jittests", "status": "PASS", "test": "self-test/readlineBuf.js", "thread": "main", "time": 1540284548.868688} [task 2018-10-23T08:49:08.874Z] Assertion failure: oom::simulator.maxChecks() == (18446744073709551615UL), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:340 [task 2018-10-23T08:49:08.874Z] Assertion failure: false (owner_.compareExchange(nullptr, this)), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:331 [task 2018-10-23T08:49:08.875Z] Exit code: -11 [task 2018-10-23T08:49:08.875Z] FAIL - self-test/oom-test-bug1497906.js [task 2018-10-23T08:49:08.875Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/self-test/oom-test-bug1497906.js | Assertion failure: oom::simulator.maxChecks() == (18446744073709551615UL), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:340 (code -11, args "--ion-eager --ion-offthread-compile=off") [0.2 s] [task 2018-10-23T08:49:08.875Z] {"action": "test_start", "jitflags": "--ion-eager --ion-offthread-compile=off", "pid": 14215, "source": "jittests", "test": "self-test/oom-test-bug1497906.js", "thread": "main", "time": 1540284548.696499} [task 2018-10-23T08:49:08.876Z] {"action": "test_end", "extra": {"jitflags": "--ion-eager --ion-offthread-compile=off", "pid": 14215}, "jitflags": "--ion-eager --ion-offthread-compile=off", "message": "Assertion failure: oom::simulator.maxChecks() == (18446744073709551615UL), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:340", "pid": 14215, "source": "jittests", "status": "FAIL", "test": "self-test/oom-test-bug1497906.js", "thread": "main", "time": 1540284548.875389} [task 2018-10-23T08:49:08.876Z] INFO exit-status : -11 [task 2018-10-23T08:49:08.876Z] INFO timed-out : False [task 2018-10-23T08:49:08.876Z] INFO stderr 2> Assertion failure: oom::simulator.maxChecks() == (18446744073709551615UL), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:340 [task 2018-10-23T08:49:08.877Z] INFO stderr 2> Assertion failure: false (owner_.compareExchange(nullptr, this)), at /builds/worker/workspace/build/src/obj-spider/dist/include/js/Utility.h:331 [task 2018-10-23T08:49:08.903Z] TEST-PASS | js/src/jit-test/tests/sharedbuf/asm-link.js | Success (code 0, args "--ion-eager --ion-offthread-compile=off") [0.1 s] [task 2018-10-23T08:49:08.903Z] {"action": "test_start", "jitflags": "--ion-eager --ion-offthread-compile=off", "pid": 14301, "source": "jittests", "test": "sharedbuf/asm-link.js", "thread": "main", "time": 1540284548.806958} [task 2018-10-23T08:49:08.903Z] {"action": "test_end", "extra": {"jitflags": "--ion-eager --ion-offthread-compile=off", "pid": 14301}, "jitflags": "--ion-eager --ion-offthread-compile=off", "message": "Success", "pid": 14301, "source": "jittests", "status": "PASS", "test": "sharedbuf/asm-link.js", "thread": "main", "time": 1540284548.903266} [task 2018-10-23T08:49:08.958Z] TEST-PASS | js/src/jit-test/tests/self-test/assertDeepEq.js | Success (code 0, args "") [1.2 s]
Flags: needinfo?(jdemooij)
Flags: needinfo?(jdemooij)
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Pushed by jandemooij@gmail.com: https://hg.mozilla.org/integration/autoland/rev/72cca5ce21f4 Disallow {oom,stack,interrupt}Test functions on shell worker threads. r=jonco,nbp
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla65
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: