Bug 1501229 - Disallow {oom,stack,interrupt}Test functions on shell worker threads. r=jonco,nbp

Differential Revision: https://phabricator.services.mozilla.com/D9524

--HG--
extra : moz-landing-system : lando